Chat vertical scrollbar resolved

--- a/public/assets/css/cus/chat.scss
+++ b/public/assets/css/cus/chat.scss
@@ -81,7 +81,7 @@ input {
 }
 .conversation{
 	height: 500px;
-	overflow-x: scroll;
+	overflow-y: scroll;
 	/* display: flex;
 	flex: 5;
 	flex-direction: column;
